grouped vacation images and descriptions

--- a/vacations.html
+++ b/vacations.html
@@ -5,8 +5,10 @@
     </head>
     <body>
         <h1>Vacations !</h1>
-        <p>Beach</p>
-        <img src="images/v1.jpeg">
+        <div style="border:solid">
+            <p>Beach</p>
+            <img src="images/v1.jpeg">
+        </div>
         <p>Mountain</p>
         <img src="images/v2.jpg">
         <p>Forest</p>
