grouped radio button

--- a/newuser.html
+++ b/newuser.html
@@ -22,11 +22,11 @@
         </div>
         <div>
             <h5 style="margin-bottom: 0px;">How did you hear about us ?</h5>
-            <input type="radio">
+            <input type="radio" name="h">
             <label>Social Media</label>
-            <input type="radio">
+            <input type="radio" name="h">
             <label>News Channel</label>
-            <input type="radio">
+            <input type="radio" name="h">
             <label>News Paper</label>
         </div>
         <div style="margin-top: 50px;">
