--- a/story.html
+++ b/story.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <style>h3 {
+            text-shadow: 2px 2px #ff0000;
+          }</style>
     </head>
     <body>
-        <h1>Summer</h1>
-        <h2>Sneak peak</h2>
-        <p>
-            Summer season is very hot !
-        </p>
+        <h1 style="text-align: center;">Summer</h1>
+        <div style="background-color: bisque;">
+            <h2>Sneak peak</h2>
+            <p>
+                Summer season is <span style="font-weight: bold;">very hot !</span>
+                <br> weather is hot, humid and dry during this season, and temperature can rise extremely high in certain places, as the Earth tilts itself towards the Sun. As the Sun shines brightly in summer, this season is suitable for farmers to prepare for cultivation, and we get many seasonal fruits and vegetables.
+            </p>
+        </div>
+        
         <h3> review questions</h3>
         <ul>
             <li>good story line</li>
