--- a/story.html
+++ b/story.html
@@ -4,18 +4,21 @@
         <style>h3 {
             text-shadow: 2px 2px #ff0000;
           }</style>
+          <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h1 style="text-align: center;">Summer</h1>
         <div style="background-color: bisque;">
-            <h2>Sneak peak</h2>
+            <h1 style="background-color:blanchedalmond;">Sneak peak</h1>
             <p>
-                Summer season is <span style="font-weight: bold;">very hot !</span>
-                <br> weather is hot, humid and dry during this season, and temperature can rise extremely high in certain places, as the Earth tilts itself towards the Sun. As the Sun shines brightly in summer, this season is suitable for farmers to prepare for cultivation, and we get many seasonal fruits and vegetables.
+                Summer season is <span id="bigdeal">very hot !</span>
+                <br> weather is hot, humid and dry during this season, and temperature can rise extremely high in certain places, 
+                as the Earth tilts itself towards the Sun. As the Sun shines brightly in summer, this season is suitable for farmers 
+                to prepare for cultivation, and we get many seasonal fruits and vegetables.
             </p>
         </div>
         
-        <h3> review questions</h3>
+        <h3>Review questions</h3>
         <ul>
             <li>good story line</li>
             <a href="rv1.html">rv1</a>
@@ -24,7 +27,7 @@
             <li>increase value to money</li>
             <a href="rv3.html">rv3</a>
         </ul>
-        <h2>The Story</h2>
+        <h2 >The Story</h2>
         <p>
             Summer fruits are mango,grapes,oranges etc
         </p>
