Added custom fonts

--- a/story.html
+++ b/story.html
@@ -5,16 +5,18 @@
             text-shadow: 2px 2px #ff0000;
           }</style>
           <link rel="stylesheet" href="css/styles.css">
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1 style="text-align: center;">Summer</h1>
         <div style="background-color: bisque;">
             <h1 style="background-color:blanchedalmond;">Sneak peak</h1>
-            <p>
+            <p class="jacquard-24-regular">
                 Summer season is <span id="bigdeal">very hot !</span>
                 <br> weather is hot, humid and dry during this season, and temperature can rise extremely high in certain places, 
-                as the Earth tilts itself towards the Sun. As the Sun shines brightly in summer, this season is suitable for farmers 
-                to prepare for cultivation, and we get many seasonal fruits and vegetables.
+                as the Earth tilts itself towards the Sun. 
             </p>
         </div>
         
@@ -28,11 +30,29 @@
             <a href="rv3.html">rv3</a>
         </ul>
         <h2 >The Story</h2>
-        <p>
-            Summer fruits are mango,grapes,oranges etc
+        <p class="jacquard-24-regular">
+            As the Sun shines brightly in summer, this season is suitable for farmers 
+                to prepare for cultivation, and we get many seasonal fruits and vegetables.The summer season brings so much happiness to everyone. 
+                Everyone eagerly waits for summer to come. People get a chance to enjoy the sun and its heat. People can go outside to enjoy the sun. 
+                People spend most of their day outside during summer. They want to feel hot sun rays on their face and body, which makes them feel 
+                refreshed. The summer season is too good for students as they can enjoy long vacations in summer. They do not have to go to school 
+                and can enjoy their vacations. They can take part in different activities that they like to do. Kids love the summer season as it 
+                is the time for playing outside. They can go to a swimming pool, park or any other place where they can enjoy playing. 
         </p>
-        <p>
-            this year temperature has reached 38 degree !
+        <p class="jacquard-24-regular">
+            There are 
+                so many things for children to do during summer. They can also go on a trip with their family and friends. People can also enjoy t
+                heir time by sitting outside their homes. And castles make for a perfect summer day at the beach. When going to the pool, one will 
+                most likely find a suntan lotion dispenser. From late afternoon thunderstorms to s'mores by the campfire with friends and family, 
+                summers are a wonderful time of year filled with many different stereotypical memories that pop into mind as the word is spoken.
+                The summer season, which is full of heat and dust, is a blessing in disguise. The scorching rays of the sun evaporate the water from 
+                all water bodies at this time, aBesides the innumerable difficulties people face, it is the most awaited season, especially by the 
+                students. They get over with their final exams, and it is vacation time for them as well as their parents. They plan to visit their 
+                grandparents or places like hill stations to escape the heat. Some also go to the beaches, as they are very pleasant at night. 
+                Children take up many indoor activities. Swimming and other water sports are some favorite outdoor activities in this season, making 
+                it somewhat pleasant. Summer break for the students is a good time for learning various new activities. Most students go for summer 
+                camps at cooler places.nd this phenomenon gives way to the advent of the rainy season. The low pressure created over the 
+                landmass of India during this season is responsible for months-long monsoon rain. Summer fruits are mango,grapes,oranges etc
         </p>
     </body>
     <footer>
